--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="container">
 
     <div class="head row">
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="head_order-box head_div">
                 <div class="wrap">
                     <div class="wrap_block">
@@ -27,12 +27,17 @@
                             <option value="email">e-mail</option>
                             <option value="status">статус</option>
                         </select>
+                        <span>по</span>
+                        <select id="head_order-box_direct_select">
+                            <option value="asc">возр</option>
+                            <option value="desc">убыв</option>
+                        </select>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="head_count_page head_div">
                 <div class="wrap">
                     <div class="wrap_block">
